--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>mall-fe</title>
   <link href="https://cdn.bootcss.com/Swiper/4.1.0/css/swiper.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_117096_dawtptwmkjawnrk9.css" />
+  <link rel="stylesheet" href="//at.alicdn.com/t/font_117096_dawtptwmkjawnrk9.css">
+  <script src="https://polyfillservice.wallstreetcn.com/v2/polyfill.min.js?features=default,es6,es7,fetch&unknown=polyfill&flags=gated"></script>
 </head>
 
 <body>
